--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "devDependencies": {
     "parcel-bundler": "^1.12.4",
     "sass": "^1.26.10"
+  },
+  "dependencies": {
+    "reset.css": "^2.0.2"
   }
 }
